fix: text-alignment, margin & size #2

--- a/poetry.css
+++ b/poetry.css
@@ -24,7 +24,7 @@ h1{
 
 p{
 	font-size: 1.2rem;
-	text-align: flex;
+	text-align: center;
 	line-height: 1;
 	margin-bottom: 30px;
 	margin-top: 10px;
@@ -33,13 +33,13 @@ p{
 
 @media (max-width: 600px){
 	h1{
-		font-size: 1.8rem;
+		font-size: 1.5rem;
 		padding:20%;
 	}
 }
 
 	p{
-		font-size: 0.8rem;
+		font-size: 0.5rem;
 		line-height: 1.4;
 		padding:0 5%;
 	}
